# SPH

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Flow.cpp  Flow.h  Flow_drawer.cpp  Flow_drawer.h  Help.cpp  Help.h  MainWindow.cpp  MyQGraphicsView.cpp  Particile.cpp  Particile.h  SpaceParsing.cpp  SpaceParsing.h  Visualisator.cpp  Visualisator.h  W_functions.cpp  W_functions.h  main.cpp  myqgraphicsview.h  result.txt  result1.txt  sph_interface.pro  testB.txt  testB_1.txt  testI.txt
SPH_QUI/: SPH_QUI.pro
python/: mathplot.txt  mathplot1.txt  mathplot2.txt  mathplot3.txt  mathplot4.txt
python/2000_50/: mathplot1.txt  mathplot10.txt  mathplot11.txt  mathplot12.txt  mathplot13.txt  mathplot14.txt  mathplot15.txt  mathplot16.txt  mathplot2.txt  mathplot3.txt  mathplot4.txt  mathplot5.txt  mathplot6.txt  mathplot7.txt  mathplot8.txt  mathplot9.txt
python/6000_15/: mathplot1.txt  mathplot10.txt  mathplot11.txt  mathplot12.txt  mathplot13.txt  mathplot14.txt  mathplot15.txt  mathplot16.txt  mathplot2.txt  mathplot3.txt  mathplot4.txt  mathplot5.txt  mathplot6.txt  mathplot7.txt  mathplot8.txt  mathplot9.txt
python/6000_50/: mathplot1.txt  mathplot10.txt  mathplot11.txt  mathplot12.txt  mathplot13.txt  mathplot14.txt  mathplot15.txt  mathplot16.txt  mathplot2.txt  mathplot3.txt  mathplot4.txt  mathplot5.txt  mathplot6.txt  mathplot7.txt  mathplot8.txt  mathplot9.txt
txt/: testB.txt  testB_.txt  testB_1.txt  testB_2.txt  testB_228.txt  testB_3.txt  testB_4.txt  testB_5.txt  testB_6.txt  testI.txt  testI_.txt  testI_1.txt  testI_2.txt  testI_228.txt  testI_3.txt  testI_4.txt  testI_5.txt  testI_6.txt
